# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: profile_generator.py
lecture_3/: student_grade_analyzer.py
lecture_4/: queries.sql  school.db
lecture_5/book_api/: books.db  main.py  requirements.txt
lecture_6/: Dockerfile
