[project]
name = "innowise-laboratory"
version = "0.1.0"
description = ""
authors = [
    {name = "Lizaveta",email = "li.astapenka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
